objects/vlocity_cmt__CachedAPIChangeEntry__c.object
<CustomObject>
    <description>This will have the logs of the recomputation batch jobs run against the cached api change objects</description>
    <fields>
        <fullName>vlocity_cmt__CacheKey__c</fullName>
        <description>This is the Cache Key being recomputed.</description>
        <label>CacheKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CacheManagementLog__c</fullName>
        <description>This will log the error if any while recomputing</description>
        <label>CacheManagementLog</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CachedAPIChange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cached API Change</label>
        <referenceTo>vlocity_cmt__CachedAPIChange__c</referenceTo>
        <relationshipLabel>Cached API Change Relationships</relationshipLabel>
        <relationshipName>CachedAPIChange_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>provide sequence to the records,to maintain order of execution</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CachedAPIChangeEntry</label>
    <nameField>
        <label>CachedAPIChangeEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIChangeEntrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>